styles/site.css
/**
     Title: site.css
     Author: Megan Walker
     Date: 02/03/2023
     Description: styling for Personal portfolio
*/

body.light-theme {
  --text-color: #000;
  --text-color-light: #d9b08c;
  --background-color: #116466;
  --background-color-light: #ffcb9a;
  --nav-background-color: #2c3531;
  --nav-text-color: #d1e8e2;
  --button-background-color: #d9b08c;
  --card-background-color: white;
  --table-header-text-color: #000;
  --header-background-color: #ffcb9a;
  --box-shadow-color: #262626;
}

body {
  font-family: "libre baskerville", serif;
  margin: 10px 0px 0px 220px;
  background-color: var(--background-color);
}

main {
  margin: 0;
  padding: 10%;
  padding-left: 15%;
}

footer {
  padding: 5%;
  background-color: var(--nav-background-color);
  color: var(--text-color-light);
}

/* Fixed sidenav, full height */
.sidenav {
  height: 100%;
  position: fixed;
  z-index: 1;
  top: 0;
  left: 0;
  background-color: var(--nav-background-color);
  overflow-x: hidden;
  padding-top: 20px;
  box-shadow: 10px 10px 30px var(--box-shadow-color);
}

/* Style the sidenav links and the dropdown button */
.sidenav a,
.dropdown-btn {
  padding: 6px 10px 20px 20px;
  text-decoration: none;
  font-size: 20px;
  color: var(--nav-text-color);
  display: block;
  border: none;
  background: none;
  width: 100%;
  text-align: left;
  cursor: pointer;
  outline: none;
}

/* On mouse-over */
.sidenav a:hover,
.dropdown-btn:hover {
  color: #f1f1f1;
}

/* Main content */
.main {
  margin-left: 200px;
  /* Same as the width of the sidenav */
  font-size: 20px;
  /* Increased text to enable scrolling */
  padding: 0px 10px;
}

/* Add an active class to the active dropdown button */
.active {
  background-color: green;
  color: white;
}

/* Dropdown container (hidden by default). Optional: add a lighter background color and some left padding to change the design of the dropdown content */
.dropdown-container {
  display: none;
  background-color: #262626;
  padding-left: 8px;
}

/* Optional: Style the caret down icon */
.fa-caret-down {
  float: right;
  padding-right: 8px;
}

#greeting {
  color: var(--text-color);
  text-align: left;
  float: none;
  font-weight: bolder;
}

#greeting-name {
  float: none;
  font-family: italic bold 12px/30px Georgia, serif;
  font-size: 50px;
  text-shadow: var(--nav-text-color) 1px 0 10px;
}

h1 {
  font-size: 36px;
  text-align: center;
  margin-bottom: 20px;
}

h2 {
  font-size: 24px;
  margin-bottom: 10px;
}

.container {
  font-family: "Times New Roman", Times, serif;
  background-color: var(--card-background-color);
  width: 100%;
  margin: 0 auto;
  text-align: left;
  padding-top: 2px;
  padding-bottom: 30px;
}

.container h1,
h2 {
  text-decoration-line: underline;
}

.left {
  float: left;
  width: 30%;
  text-align: center;
}

.left li {
  text-align: left;
}

.left h2 {
  text-align: center;
  margin-top: 30%;
}

.right {
  float: right;
  width: 70%;
}

.clearfix {
  clear: both;
}

#container {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  padding: 10px;
  grid-gap: 10px;
}

.card {
  background-color: var(--background-color-light);
  box-shadow: 0 2px 2px rgba(0, 0, 0, 0.1);
}

.card-title {
  text-align: center;
  padding: 20px;
  background-color: var(--nav-background-color);
}

.card-title a,
h4 {
  color: var(--text-color-light);
  margin: 0px;
}

.card-content {
  padding: 20px;
  display: flow-root;
}

.card-content ul {
  padding: 0px;
  list-style: none;
  text-align: center;
}

a {
  text-decoration: none;
  color: var(--text-color);
  text-emphasis: bold;
  font-weight: bolder;
}

a:hover {
  color: var(--text-color-light);
}

#resume-page {
  background-color: var(--card-background-color);
  margin: 10% 10% 3% 10%;
  padding: 40px;
  max-width: 800px;
}

footer a {
  color: var(--text-color-light);
}

footer ul {
  list-style: none;
  padding: 0px;
}

footer a:hover {
  color: var(--text-color);
}

#bucket-list {
  background-color: var(--background-color-light);
  margin: 10% 10% 15% 10%;
  padding: 40px;
  border-radius: 6px;
}

#bucket-list i {
  text-align: center;
}

#bucket-list ul {
  list-style: none;
  padding: 0px;
}

#resume-button {
  padding: 0% 36% 0% 36%;
}

#resume-button button {
  color: var(--text-color-dark);
  background-color: var(--background-color-light);
  text-decoration: none;
  font-size: 20px;
  border-radius: 6px;
  font-weight: bold;
  padding: 10px 20px 10px 20px;
  cursor: pointer;
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
}

#copyright {
  text-align: right;
  font-size: small;
}

.left-image {
  float: left;
  margin: 0px 20px 20px 0px;
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
  text-align: center;
  background-color: var(--card-background-color);
}

.right-text {
  text-align: left;
}

.right-text p {
  text-indent: 30px;
}

.left-text p {
  text-indent: 30px;
}

.right-image {
  float: right;
  margin: 0px 0px 20px 20px;
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
  text-align: center;
  background-color: var(--card-background-color);
}

.left-text {
  text-align: left;
}

#about-card {
  width: 100%;
}

#home-img {
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
}

